--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "nix-editor"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 serde_json = "1.0.74"
-argparse = "0.2.2"
+clap =  { version = "3.0.7", features = ["derive"] }
 rnix = "0.10.1"
-rowan = "0.15.2"
+colored = "2.0.0"
