--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,20 @@
 [package]
 name = "nix-editor"
-version = "0.2.2"
+version = "0.2.3"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "GPL-3.0-or-later"
+description = "Some functions to modify NixOS configuration files"
+repository = "https://github.com/vlinkz/nix-editor/"
+readme = "README.md"
+include = [
+  "src/*",
+  "Cargo.toml",
+  "LICENSE*",
+  "README.md",
+]
 
 [dependencies]
-serde_json = "1.0.74"
-clap =  { version = "3.0.7", features = ["derive"] }
+serde_json = "1.0.79"
+clap =  { version = "3.1.6", features = ["derive"] }
 rnix = "0.10.1"
 colored = "2.0.0"
