--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nix-editor"
-version = "0.2.12"
+version = "0.3.0-beta.1"
 edition = "2021"
 license = "MIT"
 description = "Some functions to modify NixOS configuration files"
