--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,16 +6,16 @@ license = "MIT"
 description = "Some functions to modify NixOS configuration files"
 repository = "https://github.com/vlinkz/nix-editor/"
 readme = "README.md"
-include = [
-  "src/*",
-  "Cargo.toml",
-  "LICENSE*",
-  "README.md",
-]
+include = ["src/*", "Cargo.toml", "LICENSE*", "README.md"]
 
 [dependencies]
-clap =  { version = "4.1", features = ["derive"] }
+clap = { version = "4.1", features = ["derive"] }
 rnix = "0.11"
 owo-colors = "3.5"
 thiserror = "1.0"
 nixpkgs-fmt = "1.3"
+
+[dev-dependencies]
+expect-test = "1.4.0"
+# serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
